working on overflow bug

--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
   scroll-behavior: smooth;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 .explore-link {
   color: #ffffff;
   text-decoration: none;
